--- a/dispositivos.css
+++ b/dispositivos.css
@@ -154,3 +154,10 @@
         display: none;
     }
 }
+
+@media screen and (max-width:433px){
+
+    .contenedor .pelicula .titulo{
+        display: none;
+    }
+}
